# zap

./: .gitignore  LICENSE  README.md  call_energi_service_api.py  data_cleaning.py  data_cleaning_functions.py  get_data_energi_service.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
core/: __init__.py
core/fetch/: __init__.py  acn.py  dmi.py  eds.py
core/models/: GRU.py  LSTM.py  __init__.py  abstract_rnn.py  cnn_lstm.py  cnn_lstm_24hr_lag.py  cnn_lstm_relu.py  gru.py  gru_24hr_lag.py  gru_relu.py  lstm.py  lstm_24hr_lag.py  lstm_relu.py  model_training.py
core/notebooks/: 0-GRU-trefor-park.ipynb  0-LSTM-trefor-park.ipynb  01_trefor-park-gru.ipynb  0_GRU_trefor_park.ipynb  0_LSTM_trefor_park.ipynb  Caltech.ipynb  DMI.ipynb  Gridsearch.ipynb  LSTM.ipynb  LSTN_hyperparameter.ipynb  Norlys.ipynb  Trefor.ipynb  baselines.ipynb  baselines_3parks.ipynb  baselines_caltech.ipynb  baselines_park4only.ipynb  cnn_trefor_park.ipynb  ml_example_pipeline.ipynb  park_1_analysis.ipynb  park_2_analysis.ipynb  park_3_analysis.ipynb  park_4_analysis.ipynb  park_5_analysis.ipynb  park_6_analysis.ipynb
core/preprocessing/: __init__.py  acn.py  create_datasets.py  merge_feature.py  nordlys.py  norlys.py  normalize_caltech.py  preprocess_dmi.py  sliding_window.py  trefor.py  trefor_cleaning.py  trefor_preprocessing.py
core/util/: AGTO.py  (+16 more)
dmi/: plot.py  tablecount.py
energi_service/: call_energi_service_api.py  get_data_energi_service.py
plots/: experiment0.py
preprocessing/: create_datasets.py  trefor_cleaning.py  trefor_preprocessing.py
util/: util.py
(+110 files in other folders)
