[project]
name = "ev-charging"
version = "2024.2.0"
requires-python = ">= 3.10"
dependencies = [
  'matplotlib >= 3.9.2',
  'pandas >= 2.2.3',
  'requests >= 2.32.3',
  'ruff >= 0.6.7',
  'python-dotenv >= 1.0.1',
  'torch >= 2.4.1',
]

[project.scripts]
fetch-sources = 'core.fetch:main'

[tool.ruff]
lint.select = [
  "F",
  "E",
  "W",
  "C90",
  "N",
  "D",
  "A",
  "ANN",
  "S",
  "COM",
  "Q",
  "ARG",
  "PTH",
  "PD",
  "NPY",
]

lint.ignore = ["D100", "D203", "D211", "D213", "COM812", "ANN101"]
