[project]
name = "zap"
version = "2024.2.0"
requires-python = ">= 3.10"
dependencies = [
  'matplotlib >= 3.9.2',
  'pandas >= 2.2.3',
  'requests >= 2.32.3',
  'ruff >= 0.6.7',
  'python-dotenv >= 1.0.1',
  'torch >= 2.4.1',
  'jupyterlab >= 4.2.5',
  'scikit-learn >= 1.5.2',
  'openpyxl >= 3.1.5',
  'tqdm >= 4.66.5',
  'pre-commit >= 4.0.1',
]

[project.scripts]
fetch-sources = 'core.fetch:fetch'
preprocess = 'core.preprocessing:preprocess'

[tool.ruff]
lint.select = [
  "F",
  "E",
  "W",
  "C90",
  "N",
  "D",
  "A",
  "ANN",
  "S",
  "COM",
  "Q",
  "ARG",
  "PTH",
  "PD",
  "NPY",
]

lint.ignore = ["D100", "D203", "D211", "D213", "COM812", "ANN101"]
